added comment for covariance matrix estimation using identity matrix

--- a/Group Project.ipynb
+++ b/Group Project.ipynb
@@ -214,6 +214,7 @@
    "source": [
     "#load dataframe\n",
     "df = pd.read_csv(\"gp_data_1986_to_2015.csv\")\n",
+    "\n",
     "#preview\n",
     "df.head()"
    ]
@@ -1803,6 +1804,7 @@
     }
    ],
    "source": [
+    "#redundant because identity matrix estimation doesnt require shrinkage\n",
     "r_identity.x[0]"
    ]
   },
