added to-do sections

--- a/Group Project.ipynb
+++ b/Group Project.ipynb
@@ -1940,6 +1940,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#simple estimate (using V_hat directly)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 223,
    "metadata": {},
    "outputs": [
@@ -2018,6 +2027,69 @@
     "tan_id /= np.sum(tan_id)\n",
     "evaluate_portfolio_performance_on_data(tan_id, test.iloc[:, 3:46])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4. Evaluation I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5. Using only most recent 5 years of Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test with most recent 5 year data (repeat shrinkage optimization for constant covariance matrix method and do out-of-sample testing) then see if it's better"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6. Other Portfolio Strategies (sortino maximizing, maximum diversification, EWP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with results from 2.5, try sortino maximizing, maximum diversification and EWP to see which portfolio strategy is the best "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
