added description for evaluations I and II

--- a/Group Project.ipynb
+++ b/Group Project.ipynb
@@ -2064,13 +2064,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The in-sample tests highlight the constant correlation method as the superior estimator for the covariance matrix, producing a tangency portfolio with the highest Sharpe ratio. Across the 20-fold cross-validation process, all three methods exhibit similar degrees of variance in Sharpe ratios, with standard deviations of 0.249, 0.262, and 0.275.\n",
+    "\n",
+    "Conversely, the diagonal matrix approach, utilizing a shrinkage constant of 0.685, proves most effective for out-of-sample performance, yielding the best Sharpe ratio despite a relatively low expected return of 4.56%. In comparison, the constant correlation matrix approach, while trailing the diagonal matrix approach by only 0.06 in terms of out-of-sample performance, presents a significantly higher expected return at 11.5%. However, this gain in expected return comes at the cost of a higher standard deviation (16.8%), nearly three times that of the diagonal matrix.\n",
+    "\n",
+    "The choice of the preferred portfolio hinges on individual risk appetite. While the constant correlation approach offers a higher expected return, it also introduces greater volatility. Since we are more interested in beating the market, we believe that the constant correlation method is the most ideal."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5. Using only most recent 10 years of Data"
+    "### 2.5. Using only most recent 10 years of Data\n",
+    "\n",
+    "Next, we sought to further improve our approach to portfolio optimization. We hypothesized that using only recent data, as opposed to the entire dataset, would yield better portfolios. This is due to the dynamic nature of the market causing older data points to be less relevant in predicting future price movements. To do this, we picked the most recent 10 years of data, and dedicated 5 years of data to training and testing respectively. The goal here is to see if it improves the performance of our most ideal model (Vcc approach)."
    ]
   },
   {
@@ -2142,8 +2150,6 @@
     "#test with most recent 5 year data (repeat shrinkage optimization for constant covariance matrix method and do out-of-sample testing) then see if it's better\n",
     "#at low qty of train data, the shrinkage param tends to behave weird. sticking to 8 yr train, 2 yr test for now\n",
     "\n",
-    "\n",
-    "\n",
     "# total dataset will comprise 8years of training data + 2 years of test data\n",
     "#data is given per month. to find the last 10 years, we take the last 120 observations\n",
     "df_recent = pd.read_csv(\"gp_data_1986_to_2015.csv\")\n",
@@ -2159,6 +2165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#split into train and test\n",
     "train_recent = df_recent.iloc[:96,:]\n",
     "test_recent = df_recent.iloc[96:,:]"
    ]
@@ -2192,6 +2199,7 @@
     }
    ],
    "source": [
+    "#getting a general sense of where the optimal shrinkage constant lies\n",
     "output_array = []\n",
     "\n",
     "shrinkage_space = np.linspace(0, 1, 20)\n",
@@ -2220,6 +2228,8 @@
     }
    ],
    "source": [
+    "##optimize for shrinkage constant for Vcc\n",
+    "\n",
     "#set initial guess\n",
     "w0 = [0.7]\n",
     "\n",
@@ -2253,6 +2263,7 @@
     }
    ],
    "source": [
+    "#Vcc's optimal shrinkage constant, using recent data\n",
     "r_5years.x[0]"
    ]
   },
@@ -2285,6 +2296,7 @@
     }
    ],
    "source": [
+    "#visualizing the sharpe ratio of each fold across the 20-fold cross validation process for the optimal shrinkage constant found (in-sample performance analysis)\n",
     "cv_cc = objective_fn(r_5years.x, df = train_recent, return_ls = True)\n",
     "plt.figure(figsize = (15, 10))\n",
     "plt.plot(cv_cc, label = \"constant covariance\")"
@@ -2304,15 +2316,30 @@
     }
    ],
    "source": [
+    "#same as above, but in terms of mean and standard deviation of sharpe ratio across the 20 folds for the optimal shrinkage constant\n",
     "v = eval('cv_cc')\n",
     "print(f\"{'cv_cc'} - mean sharpe: {np.mean(v):.3f}, std sharpe: {np.std(v):.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Er': 8.604206966780872,\n",
+       " 'sigma': 10.010135488737768,\n",
+       " 'var': 100.20281250288734,\n",
+       " 'Sharpe': 0.8595495012491406}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#calculate Vhat\n",
     "V_hat = train_recent.iloc[:, 3:].cov()\n",
@@ -2325,34 +2352,22 @@
     "grand_avg_corr /= (43 * (43 - 1)) / 2\n",
     "\n",
     "#calculate Vcc\n",
-    "Vcc = V_hat/correlations * grand_avg_corr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Er': 8.604206966780872,\n",
-       " 'sigma': 10.010135488737768,\n",
-       " 'var': 100.20281250288734,\n",
-       " 'Sharpe': 0.8595495012491406}"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "Vcc = V_hat/correlations * grand_avg_corr\n",
+    "\n",
     "#constant covariance\n",
     "Vshrink_cc = r_5years.x[0] * V_hat + (1 - r_5years.x[0]) * Vcc\n",
     "tan_cc = np.linalg.inv(Vshrink_cc) @ er_test\n",
     "tan_cc /= np.sum(tan_cc)\n",
     "evaluate_portfolio_performance_on_data(tan_cc, test_recent.iloc[:, 3:46])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6 Evaluation II\n",
+    "\n",
+    "From the above results, we can see that the out-of-sample expected return of our new tangency portfolio decreased slightly to 8.60%, but the standard deviation of return decreased more than proportionately, from 16% to 10%. This led to a significant improvement in the sharpe ratio, from 0.689 to 0.860. In this regard, our hypothesis has been validated"
    ]
   },
   {
