--- a/Group Project.ipynb
+++ b/Group Project.ipynb
@@ -2383,7 +2383,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with results from 2.5, try sortino maximizing, maximum diversification and EWP to see which portfolio strategy is the best "
+    "#with results from 2.5, try sortino maximizing, maximum diversification and EWP to see which portfolio strategy is the best \n",
+    "#sortino ratio = Excess Return / downside deviation\n",
+    "#downside deviation = \n",
+    "#Sharpe Ratio highest for recent 10 yrs \n",
+    "\n",
+    "# Sortino Maximizing Portfolio\n",
+    "\n",
+    "def sortino_ratio(series, N,rf):\n",
+    "    mean = series.mean() * N -rf\n",
+    "    std_neg = series[series<0].std()*np.sqrt(N)\n",
+    "    return mean/std_neg\n",
+    "\n",
+    "# Run Optimization for Sortino Maximizing Portfolio\n",
+    "result_sortino_max = minimize(\n",
+    "    sortino_ratio,\n",
+    "    w0,\n",
+    "    method=\"SLSQP\",\n",
+    "    bounds=bounds,\n",
+    "    options={'ftol': 1e-11, 'disp': True}\n",
+    ")\n",
+    "\n",
+    "sortino_max = result_sortino_max.x[0]\n",
+    "\n",
+    "# Maximum Diversification Portfolio\n",
+    "#max_div = \n",
+    "\n",
+    "# Equal-Weighted Portfolio\n",
+    "#ewp_port = ewp(43)\n",
+    "\n",
+    "# Evaluate Portfolio Performances\n",
+    "#evaluate_portfolio_performance_on_data(sortino_max, test_recent.iloc[:, 3:46], title=\"Sortino Maximizing Portfolio\")\n",
+    "#evaluate_portfolio_performance_on_data(tan_max_div, test_recent.iloc[:, 3:46], title=\"Maximum Diversification Portfolio\")\n",
+    "#evaluate_portfolio_performance_on_data(ewp_port, test_recent.iloc[:, 3:46], title=\"Equal-Weighted Portfolio\")"
    ]
   },
   {
