feat: table for 2.1

--- a/Group Project.ipynb
+++ b/Group Project.ipynb
@@ -1854,6 +1854,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shrinkage value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>constant covariance</th>\n",
+       "      <td>0.144314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>diagonal</th>\n",
+       "      <td>0.684606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>identity</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     shrinkage value\n",
+       "constant covariance         0.144314\n",
+       "diagonal                    0.684606\n",
+       "identity                    1.000000"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics = [\n",
+    "    {'constant covariance': {'shrinkage value': r.x[0]}},\n",
+    "    {'diagonal': {'shrinkage value': r_diagonal.x[0]}},\n",
+    "    {'identity': {'shrinkage value': r_identity.x[0]}}\n",
+    "]\n",
+    "\n",
+    "tabulatedResults = pd.DataFrame()\n",
+    "for i in metrics:\n",
+    "    dataframe = pd.DataFrame.from_dict(i, orient='index', columns=['shrinkage value'])\n",
+    "    tabulatedResults = pd.concat([tabulatedResults, dataframe])\n",
+    "\n",
+    "tabulatedResults\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
